--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -73,7 +73,7 @@
 
 		<!-- Put your content here -->
 
-		<!-- For example columns with settings: -->
+		<!-- For example columns with settings: 
 		<div class="row">
 			<div class="col s6 input-field">
 				<input type="checkbox" class="value" id="option1" />
@@ -85,7 +85,7 @@
 				<label for="option2" class="translate">option2</label>
 			</div>
 		</div>
-
+		-->
 	</div>
 
 </body>
