--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -72,6 +72,31 @@
 		</div>
 
 		<!-- Put your content here -->
+		<div class="row">
+			<div class="col s3 input-field">
+				<input type="text" class="value" id="ipAddress" />
+				<label for="ipAddress" class="translate">ipAddress</label>
+			</div>
+
+			<div class="col s6 input-field">
+				<input type="checkbox" class="value" id="isFarmingMaster" />
+				<label for="isFarmingMaster" class="translate">isFarmingMaster</label>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col s3 input-field">
+				<input type="number" class="value" id="requestInterval" />
+				<label for="requestInterval" class="translate">requestInterval</label>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col s6 input-field">
+				<input type="password" class="value" id="rscpPassword" />
+				<label for="rscpPassword" class="translate">rscpPassword</label>
+			</div>
+		</div>
 
 		<!-- For example columns with settings: 
 		<div class="row">
